@@ -1,3 +1,11 @@
+2006-07-25  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/config/_system.h, _windows.h: Fixed MinGW config that also
+	need _windows.h.
+
+	* stlport/stl/config/_mingw.h: Removed, conflict with platform system
+	header.
+
 2006-07-22  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/config: Add _STLP_PLATFORM and _STLP_COMPILER repectively
